# sqlmodel-nexus

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  llms-full.txt  mkdocs.yml  pyproject.toml  sitemap.xml  start_all.sh
.github/workflows/: ci-skip.yml  ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
advanced/mcp_service/: index.html
advanced/use_case_fastapi/: index.html
advanced/use_case_service/: index.html
advanced/voyager/: index.html
api/api_core/: index.html
api/api_cross_layer/: index.html
api/api_graphql_handler/: index.html
api/api_mcp/: index.html
api/api_relationship/: index.html
api/api_use_case/: index.html
benchmarks/: baseline_v2.10.1.txt  bench_graphql.py  bench_resolver.py  conftest.py  profile_resolver.py  test_01_resolver.py  test_02_graphql.py
clean-architecture-comparison/: index.html
demo/blog/: README.md
demo/enterprise_voyager/: __init__.py  database.py  models.py  voyager_demo.py
demo/use_case/: fastapi_auto.py  graphql_server.py  jsonrpc_demo.py  mcp_server.py  mcp_server_graphql.py
demo/zhihu_article/: article.md  dtos.py  flat_sample_output.py  mcp_server.py  models.py  services.py
docs/: clean-architecture-comparison.md  clean-architecture-comparison.zh.md  feature-highlights.md  feature-highlights.zh.md  index.md  index.zh.md
docs/advanced/: mcp_service.md  mcp_service.zh.md  use_case_fastapi.md  use_case_fastapi.zh.md  use_case_service.md  use_case_service.zh.md  voyager.md  voyager.zh.md
docs/api/: api_core.md  api_core.zh.md  api_cross_layer.md  api_cross_layer.zh.md  api_graphql_handler.md  api_graphql_handler.zh.md  api_mcp.md  api_mcp.zh.md  api_relationship.md  api_relationship.zh.md  api_use_case.md  api_use_case.zh.md
docs/guide/: core_api.md  core_api.zh.md  core_api_advanced.md  core_api_advanced.zh.md  custom_relationship.md  custom_relationship.zh.md  (+14 more)
feature-highlights/: index.html
overrides/: home.html
scripts/: check-ci.sh
skill/: SKILL.md  skill.md  spec-management.md
skill/template/: pyproject.toml
skill/template/src/: main.py  models.py
skill/template/src/service/sprint/: dtos.py  service.py
skill/template/src/service/task/: dtos.py  service.py
stylesheets/: extra.css
tests/: test_argument_types.py  test_autoload.py  test_cli.py  test_compose_executor.py  test_compose_introspect.py  test_compose_introspection.py  test_compose_mcp_server.py  test_compose_recursive_types.py  test_compose_schema.py  test_context.py  test_date_time_arguments.py  test_definesubset_basemodel.py  test_fixes.py  test_introspection.py  test_jsonrpc.py  test_loader_pagination.py  test_loader_registry.py  test_optional_list_param.py  test_py314_compat.py  test_query_executor.py  test_query_meta.py  test_relationship.py  test_resolver.py  test_resolver_concurrency.py  test_resolver_context_validation.py  test_resolver_deep.py  test_response_builder.py  test_sdl_generator.py  test_selection.py  test_subset.py  test_type_compat.py  test_type_converter.py  test_use_case.py  test_use_case_flat_server.py  test_use_case_router.py  test_use_case_serialization.py  test_virtual_entities.py  test_virtual_entities_er.py  test_voyager_er_diagram_custom_scalar.py  test_voyager_security.py  (+2 more)
zh/: index.html
(+153 files in other folders)
