[project]
name = "nexusx"
version = "2.10.0"
description = "GraphQL SDL generation and query optimization for SQLModel"
authors = [{ name = "tangkikodo", email = "allmonday@126.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["sqlmodel", "graphql", "sqlalchemy", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sqlmodel>=0.0.14",
    "pydantic>=2.0",
    "graphql-core>=3.2.0",
    "fastapi>=0.135.1",
    "aiodataloader>=0.4.3",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.3.2",
]
demo = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.3.2",
]
fastmcp = [
    "fastmcp>=3.1,<3.2",
]
cli = [
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/allmonday/nexusx"
Repository = "https://github.com/allmonday/nexusx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexusx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # Loader()/Collector() as default args is the intended API pattern

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=nexusx --cov-report=term-missing"

[tool.coverage.run]
source = ["src/nexusx"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    "pass",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.4",
    "aiosqlite>=0.19.0",
    "fastmcp>=3.1.1",
    "typer>=0.12.0",
]
