[project]
name = "nexusx-template"
version = "0.1.0"
description = "nexusx 四阶段开发模板"
requires-python = ">=3.12"
dependencies = [
    "nexusx>=2.0.0",
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "aiosqlite",
    "fastmcp>=3.1,<3.2",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
